--- a/src/assets/scss/header/_nav-panel.scss
+++ b/src/assets/scss/header/_nav-panel.scss
@@ -8,11 +8,15 @@
 
 .nav-panel {
     height: $nav-panel-height;
+    border: none; // Remove todas as bordas
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1); // Adiciona apenas a borda inferior
     background: $nav-panel-bg;
-    box-shadow: $nav-panel-shadow;
-    color: #ffff;
-    transition: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2); // Sombra para baixo apenas
+    // clip-path: inset(0px -10px -10px -10px); // Controla o overflow da sombra
+    color: #DADADA;
 }
+
+
 .nav-panel--stuck {
     z-index: 10;
     width: 100%;
