Ajuste campo de busca

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -967,7 +967,7 @@
    // ----------------------------------------
       $block-margin-bottom:    50px    !default;
       $block-margin-bottom-md: 30px    !default;
-      $block-highlighted-bg:   #9b9999 !default;
+      $block-highlighted-bg:   $light-color !default;
 
    // ----------------------------------------
    // -- .block-features
