--- a/src/assets/scss/components/_block-header.scss
+++ b/src/assets/scss/components/_block-header.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 24px;
+    margin-top: 24px;
 }
 .block-header__title {
     margin-bottom: 0;
