--- a/src/assets/scss/header/_search--location--header.scss
+++ b/src/assets/scss/header/_search--location--header.scss
@@ -54,7 +54,7 @@ $local-suggestion-transition: .2s;
         max-width: 30%;
         cursor: pointer;
         border-radius: 0;
-        background-image: url(svg-select-arrow($header-search-input-default-arrows-color));
+        background-image: url(svg-select-arrow($light-opposite-color));
         background-repeat: no-repeat;
         background-size: 5px 10px;
 
@@ -66,7 +66,9 @@ $local-suggestion-transition: .2s;
         }
 
         &:hover {
-            background-color: #f5f5f5;
+            background-color: $light-opposite-color;
+            color: $light-color;
+            background-image: url(svg-select-arrow($light-color));
         }
         &:focus {
             outline: none;
